@@ -17,9 +17,16 @@
 
 package org.apache.solr.api;
 
+import static org.apache.solr.client.solrj.SolrRequest.SUPPORTED_METHODS;
+import static org.apache.solr.common.params.CommonParams.NAME;
+import static org.apache.solr.common.util.StrUtils.formatString;
+import static org.apache.solr.common.util.ValidatingJsonMap.ENUM_OF;
+import static org.apache.solr.common.util.ValidatingJsonMap.NOT_NULL;
+
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -29,10 +36,6 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
-
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Lists;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SpecProvider;
@@ -53,12 +56,6 @@ import org.apache.solr.security.PermissionNameProvider;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import static org.apache.solr.client.solrj.SolrRequest.SUPPORTED_METHODS;
-import static org.apache.solr.common.params.CommonParams.NAME;
-import static org.apache.solr.common.util.StrUtils.formatString;
-import static org.apache.solr.common.util.ValidatingJsonMap.ENUM_OF;
-import static org.apache.solr.common.util.ValidatingJsonMap.NOT_NULL;
-
 public class ApiBag {
   private final boolean isCoreSpecific;
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
@@ -69,7 +66,9 @@ public class ApiBag {
     this.isCoreSpecific = isCoreSpecific;
   }
 
-  /**Register a POJO annotated with {@link EndPoint}
+  /**
+   * Register a POJO annotated with {@link EndPoint}
+   *
    * @param o the instance to be used for invocations
    */
   public synchronized List<Api> registerObject(Object o) {
@@ -79,30 +78,36 @@ public class ApiBag {
     }
     return l;
   }
+
   public synchronized void register(Api api) {
     register(api, Collections.emptyMap());
   }
+
   public synchronized void register(Api api, Map<String, String> nameSubstitutes) {
     try {
       validateAndRegister(api, nameSubstitutes);
     } catch (Exception e) {
-      log.error("Unable to register plugin: {} with spec {} :", api.getClass().getName(), Utils.toJSONString(api.getSpec()), e);
+      log.error(
+          "Unable to register plugin: {} with spec {} :",
+          api.getClass().getName(),
+          Utils.toJSONString(api.getSpec()),
+          e);
       if (e instanceof RuntimeException) {
         throw (RuntimeException) e;
       } else {
         throw new SolrException(SolrException.ErrorCode.SERVER_ERROR, e);
       }
-
     }
   }
 
   /**
-   * PathTrie extension that combines the commands in the API being registered with any that have already been registered.
+   * PathTrie extension that combines the commands in the API being registered with any that have
+   * already been registered.
    *
-   * This is only possible currently for AnnotatedApis.  All other Api implementations will resort to the default
-   * "overwriting" behavior of PathTrie
+   * <p>This is only possible currently for AnnotatedApis. All other Api implementations will resort
+   * to the default "overwriting" behavior of PathTrie
    */
-  class CommandAggregatingPathTrie extends PathTrie<Api> {
+  static class CommandAggregatingPathTrie extends PathTrie<Api> {
 
     public CommandAggregatingPathTrie(Set<String> reserved) {
       super(reserved);
@@ -115,8 +120,8 @@ public class ApiBag {
         return;
       }
 
-      // If 'o' and 'node.obj' aren't both AnnotatedApi's then we can't aggregate the commands, so fallback to the
-      // default behavior
+      // If 'o' and 'node.obj' aren't both AnnotatedApi's then we can't aggregate the commands, so
+      // fallback to the default behavior
       if ((!(o instanceof AnnotatedApi)) || (!(node.getObject() instanceof AnnotatedApi))) {
         super.attachValueToNode(node, o);
         return;
@@ -125,31 +130,45 @@ public class ApiBag {
       final AnnotatedApi beingRegistered = (AnnotatedApi) o;
       final AnnotatedApi alreadyRegistered = (AnnotatedApi) node.getObject();
       if (alreadyRegistered instanceof CommandAggregatingAnnotatedApi) {
-        final CommandAggregatingAnnotatedApi alreadyRegisteredAsCollapsing = (CommandAggregatingAnnotatedApi) alreadyRegistered;
+        final CommandAggregatingAnnotatedApi alreadyRegisteredAsCollapsing =
+            (CommandAggregatingAnnotatedApi) alreadyRegistered;
         alreadyRegisteredAsCollapsing.combineWith(beingRegistered);
       } else {
-        final CommandAggregatingAnnotatedApi wrapperApi = new CommandAggregatingAnnotatedApi(alreadyRegistered);
+        final CommandAggregatingAnnotatedApi wrapperApi =
+            new CommandAggregatingAnnotatedApi(alreadyRegistered);
         wrapperApi.combineWith(beingRegistered);
         node.setObject(wrapperApi);
       }
     }
   }
 
-  class CommandAggregatingAnnotatedApi extends AnnotatedApi {
+  static class CommandAggregatingAnnotatedApi extends AnnotatedApi {
 
     private Collection<AnnotatedApi> combinedApis;
 
     protected CommandAggregatingAnnotatedApi(AnnotatedApi api) {
-      super(api.spec, api.getEndPoint(), api.getCommands(), null);
-      combinedApis = Lists.newArrayList();
+      super(api.spec, api.getEndPoint(), new HashMap<>(api.getCommands()), null);
+      combinedApis = new ArrayList<>();
     }
 
     public void combineWith(AnnotatedApi api) {
       // Merge in new 'command' entries
-      getCommands().putAll(api.getCommands());
+      boolean newCommandsAdded = false;
+      for (Map.Entry<String, AnnotatedApi.Cmd> entry : api.getCommands().entrySet()) {
+        // Skip registering command if it's identical to an already registered command.
+        if (getCommands().containsKey(entry.getKey())
+            && getCommands().get(entry.getKey()).equals(entry.getValue())) {
+          continue;
+        }
+
+        newCommandsAdded = true;
+        getCommands().put(entry.getKey(), entry.getValue());
+      }
 
       // Reference to Api must be saved to to merge uncached values (i.e. 'spec') lazily
-      combinedApis.add(api);
+      if (newCommandsAdded) {
+        combinedApis.add(api);
+      }
     }
 
     @Override
@@ -173,7 +192,8 @@ public class ApiBag {
     for (String method : methods) {
       PathTrie<Api> registry = apis.get(method);
 
-      if (registry == null) apis.put(method, registry = new CommandAggregatingPathTrie(ImmutableSet.of("_introspect")));
+      if (registry == null)
+        apis.put(method, registry = new CommandAggregatingPathTrie(Set.of("_introspect")));
       ValidatingJsonMap url = spec.getMap("url", NOT_NULL);
       ValidatingJsonMap params = url.getMap("params", null);
       if (params != null) {
@@ -190,7 +210,7 @@ public class ApiBag {
           if (!wildCardNames.contains(o.toString()))
             throw new RuntimeException("" + o + " is not a valid part name");
           ValidatingJsonMap pathMeta = parts.getMap(o.toString(), NOT_NULL);
-          pathMeta.get("type", ENUM_OF, ImmutableSet.of("enum", "string", "int", "number", "boolean"));
+          pathMeta.get("type", ENUM_OF, Set.of("enum", "string", "int", "number", "boolean"));
         }
       }
       verifyCommands(api.getSpec());
@@ -201,7 +221,8 @@ public class ApiBag {
     }
   }
 
-  public static void registerIntrospect(Map<String, String> nameSubstitutes, PathTrie<Api> registry, String path, Api introspect) {
+  public static void registerIntrospect(
+      Map<String, String> nameSubstitutes, PathTrie<Api> registry, String path, Api introspect) {
     List<String> l = PathTrie.getPathSegments(path);
     registerIntrospect(l, registry, nameSubstitutes, introspect);
     int lastIdx = l.size() - 1;
@@ -214,7 +235,8 @@ public class ApiBag {
     }
   }
 
-  static void registerIntrospect(List<String> l, PathTrie<Api> registry, Map<String, String> substitutes, Api introspect) {
+  static void registerIntrospect(
+      List<String> l, PathTrie<Api> registry, Map<String, String> substitutes, Api introspect) {
     ArrayList<String> copy = new ArrayList<>(l);
     copy.add("_introspect");
     registry.insert(copy, substitutes, introspect);
@@ -238,13 +260,17 @@ public class ApiBag {
       this.isCoreSpecific = isCoreSpecific;
     }
 
+    @Override
     @SuppressWarnings({"unchecked"})
     public void call(SolrQueryRequest req, SolrQueryResponse rsp) {
 
       String cmd = req.getParams().get("command");
       ValidatingJsonMap result = null;
       if (cmd == null) {
-        result = isCoreSpecific ? ValidatingJsonMap.getDeepCopy(baseApi.getSpec(), 5, true) : baseApi.getSpec();
+        result =
+            isCoreSpecific
+                ? ValidatingJsonMap.getDeepCopy(baseApi.getSpec(), 5, true)
+                : baseApi.getSpec();
       } else {
         ValidatingJsonMap specCopy = ValidatingJsonMap.getDeepCopy(baseApi.getSpec(), 5, true);
         ValidatingJsonMap commands = specCopy.getMap("commands", null);
@@ -255,19 +281,20 @@ public class ApiBag {
           } else {
             specCopy.put("commands", Collections.singletonMap(cmd, m));
           }
-
         }
         result = specCopy;
       }
       if (isCoreSpecific) {
-        List<String> pieces = req.getHttpSolrCall() == null ? null : ((V2HttpCall) req.getHttpSolrCall()).getPathSegments();
+        List<String> pieces =
+            req.getHttpSolrCall() == null
+                ? null
+                : ((V2HttpCall) req.getHttpSolrCall()).getPathSegments();
         if (pieces != null) {
           String prefix = "/" + pieces.get(0) + "/" + pieces.get(1);
           List<String> paths = result.getMap("url", NOT_NULL).getList("paths", NOT_NULL);
-          result.getMap("url", NOT_NULL).put("paths",
-              paths.stream()
-                  .map(s -> prefix + s)
-                  .collect(Collectors.toList()));
+          result
+              .getMap("url", NOT_NULL)
+              .put("paths", paths.stream().map(s -> prefix + s).collect(Collectors.toList()));
         }
       }
       List<Object> l = (List<Object>) rsp.getValues().get("spec");
@@ -280,7 +307,7 @@ public class ApiBag {
     Map<String, JsonSchemaValidator> validators = new HashMap<>();
     for (Object o : commands.entrySet()) {
       @SuppressWarnings("unchecked")
-      Map.Entry<String, Map<?,?>> cmd = (Map.Entry<String, Map<?,?>>) o;
+      Map.Entry<String, Map<?, ?>> cmd = (Map.Entry<String, Map<?, ?>>) o;
       try {
         validators.put(cmd.getKey(), new JsonSchemaValidator(cmd.getValue()));
       } catch (Exception e) {
@@ -290,12 +317,10 @@ public class ApiBag {
     return validators;
   }
 
-
   private void verifyCommands(ValidatingJsonMap spec) {
     ValidatingJsonMap commands = spec.getMap("commands", null);
     if (commands == null) return;
     getParsedSchema(commands);
-
   }
 
   private Set<String> getWildCardNames(List<String> paths) {
@@ -309,7 +334,6 @@ public class ApiBag {
     }
     return wildCardNames;
   }
-
 
   public Api lookup(String path, String httpMethod, Map<String, String> parts) {
     if (httpMethod == null) {
@@ -348,48 +372,60 @@ public class ApiBag {
   }
 
   public static List<Api> wrapRequestHandlers(final SolrRequestHandler rh, String... specs) {
-    ImmutableList.Builder<Api> b = ImmutableList.builder();
-    for (String spec : specs) b.add(new ReqHandlerToApi(rh, Utils.getSpec(spec)));
-    return b.build();
+    return Arrays.stream(specs)
+        .map(spec -> new ReqHandlerToApi(rh, Utils.getSpec(spec)))
+        .collect(Collectors.toUnmodifiableList());
   }
 
-
-  public static final SpecProvider EMPTY_SPEC = () -> ValidatingJsonMap.EMPTY;
   public static final String HANDLER_NAME = "handlerName";
-  public static final Set<String> KNOWN_TYPES = ImmutableSet.of("string", "boolean", "list", "int", "double", "object");
+  public static final SpecProvider EMPTY_SPEC = () -> ValidatingJsonMap.EMPTY;
+  public static final Set<String> KNOWN_TYPES =
+      Set.of("string", "boolean", "list", "int", "double", "object");
+  // A Spec template for GET AND POST APIs using the /$handlerName template-variable.
+  public static final SpecProvider HANDLER_NAME_SPEC_PROVIDER =
+      () -> {
+        final ValidatingJsonMap spec = new ValidatingJsonMap();
+        spec.put("methods", List.of("GET", "POST"));
+        final ValidatingJsonMap urlMap = new ValidatingJsonMap();
+        urlMap.put("paths", Collections.singletonList("$" + HANDLER_NAME));
+        spec.put("url", urlMap);
+        return spec;
+      };
 
   public PathTrie<Api> getRegistry(String method) {
     return apis.get(method);
   }
 
   public void registerLazy(PluginBag.PluginHolder<SolrRequestHandler> holder, PluginInfo info) {
-    String specName = info.attributes.get("spec");
-    if (specName == null) specName = "emptySpec";
-    register(new LazyLoadedApi(Utils.getSpec(specName), holder), Collections.singletonMap(HANDLER_NAME, info.attributes.get(NAME)));
+    register(
+        new LazyLoadedApi(HANDLER_NAME_SPEC_PROVIDER, holder),
+        Collections.singletonMap(HANDLER_NAME, info.attributes.get(NAME)));
   }
 
   public static SpecProvider constructSpec(PluginInfo info) {
     Object specObj = info == null ? null : info.attributes.get("spec");
-    if (specObj == null) specObj = "emptySpec";
-    if (specObj instanceof Map) {
-      // Value from Map<String,String> can be a Map because in PluginInfo(String, Map) we assign a Map<String, Object>
+    if (specObj != null && specObj instanceof Map) {
+      // Value from Map<String,String> can be a Map because in PluginInfo(String, Map) we assign a
+      // Map<String, Object>
       // assert false : "got a map when this should only be Strings";
-      Map<?,?> map = (Map<?,?>) specObj;
+      Map<?, ?> map = (Map<?, ?>) specObj;
       return () -> ValidatingJsonMap.getDeepCopy(map, 4, false);
     } else {
-      return Utils.getSpec((String) specObj);
+      return HANDLER_NAME_SPEC_PROVIDER;
     }
   }
 
-  public static List<CommandOperation> getCommandOperations(ContentStream stream, Map<String, JsonSchemaValidator> validators, boolean validate) {
+  public static List<CommandOperation> getCommandOperations(
+      ContentStream stream, Map<String, JsonSchemaValidator> validators, boolean validate) {
     List<CommandOperation> parsedCommands = null;
     try {
-      parsedCommands = CommandOperation.readCommands(Collections.singleton(stream), new NamedList<>());
+      parsedCommands =
+          CommandOperation.readCommands(Collections.singleton(stream), new NamedList<>());
     } catch (IOException e) {
-      throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Unable to parse commands",e);
+      throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Unable to parse commands", e);
     }
 
-    if (validators == null || !validate) {    // no validation possible because we do not have a spec
+    if (validators == null || !validate) { // no validation possible because we do not have a spec
       return parsedCommands;
     }
 
@@ -398,23 +434,25 @@ public class ApiBag {
     for (CommandOperation cmd : commandsCopy) {
       JsonSchemaValidator validator = validators.get(cmd.name);
       if (validator == null) {
-        cmd.addError(formatString("Unknown operation ''{0}'' available ops are ''{1}''", cmd.name,
-            validators.keySet()));
+        cmd.addError(
+            formatString(
+                "Unknown operation ''{0}'' available ops are ''{1}''",
+                cmd.name, validators.keySet()));
         continue;
       } else {
         List<String> errs = validator.validateJson(cmd.getCommandData());
-        if (errs != null){
+        if (errs != null) {
           // otherwise swallowed in solrj tests, and just get "Error in command payload" in test log
           // which is quite unhelpful.
-          log.error("Command errors for {}:{}", cmd.name, errs );
+          log.error("Command errors for {}:{}", cmd.name, errs);
           for (String err : errs) cmd.addError(err);
         }
       }
-
     }
     List<Map<String, Object>> errs = CommandOperation.captureErrors(commandsCopy);
     if (!errs.isEmpty()) {
-      throw new ExceptionWithErrObject(SolrException.ErrorCode.BAD_REQUEST, "Error in command payload", errs);
+      throw new ExceptionWithErrObject(
+          SolrException.ErrorCode.BAD_REQUEST, "Error in command payload", errs);
     }
     return commandsCopy;
   }
@@ -442,7 +480,8 @@ public class ApiBag {
     private final PluginBag.PluginHolder<SolrRequestHandler> holder;
     private Api delegate;
 
-    protected LazyLoadedApi(SpecProvider specProvider, PluginBag.PluginHolder<SolrRequestHandler> lazyPluginHolder) {
+    protected LazyLoadedApi(
+        SpecProvider specProvider, PluginBag.PluginHolder<SolrRequestHandler> lazyPluginHolder) {
       super(specProvider);
       this.holder = lazyPluginHolder;
     }
@@ -455,5 +494,4 @@ public class ApiBag {
       delegate.call(req, rsp);
     }
   }
-
 }
