@@ -17,10 +17,7 @@
 package org.apache.solr.handler.component;
 
 import java.io.IOException;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
-
 import org.apache.solr.core.SolrInfoBean;
 import org.apache.solr.metrics.SolrMetricsContext;
 import org.apache.solr.search.facet.FacetModule;
@@ -28,31 +25,30 @@ import org.apache.solr.util.plugin.NamedListInitializedPlugin;
 
 /**
  * TODO!
- * 
  *
  * @since solr 1.3
  */
-public abstract class SearchComponent implements SolrInfoBean, NamedListInitializedPlugin
-{
-  /**
-   * The name given to this component in solrconfig.xml file
-   */
+public abstract class SearchComponent implements SolrInfoBean, NamedListInitializedPlugin {
+  /** The name given to this component in solrconfig.xml file */
   private String name = this.getClass().getName();
 
   protected SolrMetricsContext solrMetricsContext;
 
   /**
-   * Prepare the response.  Guaranteed to be called before any SearchComponent {@link #process(org.apache.solr.handler.component.ResponseBuilder)} method.
-   * Called for every incoming request.
+   * Prepare the response. Guaranteed to be called before any SearchComponent {@link
+   * #process(org.apache.solr.handler.component.ResponseBuilder)} method. Called for every incoming
+   * request.
    *
-   * The place to do initialization that is request dependent.
+   * <p>The place to do initialization that is request dependent.
+   *
    * @param rb The {@link org.apache.solr.handler.component.ResponseBuilder}
    * @throws IOException If there is a low-level I/O error.
    */
   public abstract void prepare(ResponseBuilder rb) throws IOException;
 
   /**
-   * Process the request for this component 
+   * Process the request for this component
+   *
    * @param rb The {@link ResponseBuilder}
    * @throws IOException If there is a low-level I/O error.
    */
@@ -60,6 +56,7 @@ public abstract class SearchComponent implements SolrInfoBean, NamedListInitiali
 
   /**
    * Process for a distributed search.
+   *
    * @return the next stage for this component
    */
   public int distributedProcess(ResponseBuilder rb) throws IOException {
@@ -67,22 +64,20 @@ public abstract class SearchComponent implements SolrInfoBean, NamedListInitiali
   }
 
   /** Called after another component adds a request */
-  public void modifyRequest(ResponseBuilder rb, SearchComponent who, ShardRequest sreq) {
-  }
+  public void modifyRequest(ResponseBuilder rb, SearchComponent who, ShardRequest sreq) {}
 
   /** Called after all responses for a single request were received */
-  public void handleResponses(ResponseBuilder rb, ShardRequest sreq) {
-  }
+  public void handleResponses(ResponseBuilder rb, ShardRequest sreq) {}
 
-  /** Called after all responses have been received for this stage.
-   * Useful when different requests are sent to each shard.
-   */
-  public void finishStage(ResponseBuilder rb) {
-  }
-  
   /**
-   * Sets the name of the SearchComponent. The name of the component is usually
-   * the name defined for it in the configuration.
+   * Called after all responses have been received for this stage. Useful when different requests
+   * are sent to each shard.
+   */
+  public void finishStage(ResponseBuilder rb) {}
+
+  /**
+   * Sets the name of the SearchComponent. The name of the component is usually the name defined for
+   * it in the configuration.
    */
   public void setName(String name) {
     this.name = name;
@@ -114,23 +109,16 @@ public abstract class SearchComponent implements SolrInfoBean, NamedListInitiali
     this.solrMetricsContext = parentContext.getChildContext(this);
   }
 
-  public static final Map<String, Class<? extends SearchComponent>> standard_components;
-
-
-  static {
-    HashMap<String, Class<? extends SearchComponent>> map = new HashMap<>();
-    map.put(HighlightComponent.COMPONENT_NAME, HighlightComponent.class);
-    map.put(QueryComponent.COMPONENT_NAME, QueryComponent.class);
-    map.put(FacetComponent.COMPONENT_NAME, FacetComponent.class);
-    map.put(FacetModule.COMPONENT_NAME, FacetModule.class);
-    map.put(MoreLikeThisComponent.COMPONENT_NAME, MoreLikeThisComponent.class);
-    map.put(StatsComponent.COMPONENT_NAME, StatsComponent.class);
-    map.put(DebugComponent.COMPONENT_NAME, DebugComponent.class);
-    map.put(RealTimeGetComponent.COMPONENT_NAME, RealTimeGetComponent.class);
-    map.put(ExpandComponent.COMPONENT_NAME, ExpandComponent.class);
-    map.put(TermsComponent.COMPONENT_NAME, TermsComponent.class);
-
-    standard_components = Collections.unmodifiableMap(map);
-  }
-
+  public static final Map<String, Class<? extends SearchComponent>> standard_components =
+      Map.of(
+          HighlightComponent.COMPONENT_NAME, HighlightComponent.class,
+          QueryComponent.COMPONENT_NAME, QueryComponent.class,
+          FacetComponent.COMPONENT_NAME, FacetComponent.class,
+          FacetModule.COMPONENT_NAME, FacetModule.class,
+          MoreLikeThisComponent.COMPONENT_NAME, MoreLikeThisComponent.class,
+          StatsComponent.COMPONENT_NAME, StatsComponent.class,
+          DebugComponent.COMPONENT_NAME, DebugComponent.class,
+          RealTimeGetComponent.COMPONENT_NAME, RealTimeGetComponent.class,
+          ExpandComponent.COMPONENT_NAME, ExpandComponent.class,
+          TermsComponent.COMPONENT_NAME, TermsComponent.class);
 }
