@@ -17,6 +17,9 @@
 
 package org.apache.solr.handler.designer;
 
+import static org.apache.solr.common.params.CommonParams.VERSION_FIELD;
+import static org.apache.solr.update.processor.ParseDateFieldUpdateProcessorFactory.validateFormatter;
+
 import java.io.IOException;
 import java.math.RoundingMode;
 import java.text.NumberFormat;
@@ -26,11 +29,10 @@ import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeFormatterBuilder;
 import java.time.format.ResolverStyle;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -39,9 +41,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import com.google.common.collect.Sets;
-import org.apache.commons.lang3.LocaleUtils;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.util.NamedList;
@@ -56,15 +55,20 @@ import org.apache.solr.update.processor.ParseBooleanFieldUpdateProcessorFactory;
 import org.apache.solr.update.processor.ParseDateFieldUpdateProcessorFactory;
 import org.apache.solr.update.processor.ParseDoubleFieldUpdateProcessorFactory;
 import org.apache.solr.update.processor.ParseLongFieldUpdateProcessorFactory;
-
-import static org.apache.solr.common.params.CommonParams.VERSION_FIELD;
-import static org.apache.solr.update.processor.ParseDateFieldUpdateProcessorFactory.validateFormatter;
+import org.apache.solr.util.LocaleUtils;
 
 // Just a quick hack to flush out the design, more intelligence is needed
 public class DefaultSchemaSuggester implements SchemaSuggester {
 
   private static final List<String> DEFAULT_DATE_TIME_PATTERNS =
-      Arrays.asList("yyyy-MM-dd['T'[HH:mm[:ss[.SSS]][z", "yyyy-MM-dd['T'[HH:mm[:ss[,SSS]][z", "yyyy-MM-dd HH:mm[:ss[.SSS]][z", "yyyy-MM-dd HH:mm[:ss[,SSS]][z", "[EEE, ]dd MMM yyyy HH:mm[:ss] z", "EEEE, dd-MMM-yy HH:mm:ss z", "EEE MMM ppd HH:mm:ss [z ]yyyy");
+      Arrays.asList(
+          "yyyy-MM-dd['T'[HH:mm[:ss[.SSS]][z",
+          "yyyy-MM-dd['T'[HH:mm[:ss[,SSS]][z",
+          "yyyy-MM-dd HH:mm[:ss[.SSS]][z",
+          "yyyy-MM-dd HH:mm[:ss[,SSS]][z",
+          "[EEE, ]dd MMM yyyy HH:mm[:ss] z",
+          "EEEE, dd-MMM-yy HH:mm:ss z",
+          "EEE MMM ppd HH:mm:ss [z ]yyyy");
 
   private static final String FORMATS_PARAM = "format";
   private static final String DEFAULT_TIME_ZONE_PARAM = "defaultTimeZone";
@@ -73,57 +77,84 @@ public class DefaultSchemaSuggester implements SchemaSuggester {
   private static final String FALSE_VALUES_PARAM = "falseValue";
   private static final String CASE_SENSITIVE_PARAM = "caseSensitive";
 
-  private static final String TYPE_CHANGE_ERROR = "Failed to parse all sample values as %s for changing type for field %s to %s";
+  private static final String TYPE_CHANGE_ERROR =
+      "Failed to parse all sample values as %s for changing type for field %s to %s";
 
   // boolean parsing
-  private final Set<String> trueValues = new HashSet<>(Arrays.asList("true"));
-  private final Set<String> falseValues = new HashSet<>(Arrays.asList("false"));
-  private final List<DateTimeFormatter> dateTimeFormatters = new LinkedList<>();
+  private final Set<String> trueValues = Set.of("true");
+  private final Set<String> falseValues = Set.of("false");
+  private final List<DateTimeFormatter> dateTimeFormatters = new ArrayList<>();
   private boolean caseSensitive = false;
 
   @Override
-  public void validateTypeChange(SchemaField field, FieldType toType, List<SolrInputDocument> docs) throws IOException {
+  public void validateTypeChange(SchemaField field, FieldType toType, List<SolrInputDocument> docs)
+      throws IOException {
     final NumberType toNumType = toType.getNumberType();
     if (toNumType != null) {
       validateNumericTypeChange(field, toType, docs, toNumType);
     }
   }
 
-  protected void validateNumericTypeChange(SchemaField field, FieldType toType, List<SolrInputDocument> docs, final NumberType toNumType) {
+  protected void validateNumericTypeChange(
+      SchemaField field,
+      FieldType toType,
+      List<SolrInputDocument> docs,
+      final NumberType toNumType) {
     // desired type is numeric, make sure all the sample values are numbers
-    List<Object> fieldValues = docs.stream()
-        .map(d -> d.getFieldValue(field.getName()))
-        .filter(Objects::nonNull)
-        .flatMap(c -> (c instanceof Collection) ? ((Collection<?>) c).stream() : Stream.of(c))
-        .collect(Collectors.toList());
+    List<Object> fieldValues =
+        docs.stream()
+            .map(d -> d.getFieldValue(field.getName()))
+            .filter(Objects::nonNull)
+            .flatMap(c -> (c instanceof Collection) ? ((Collection<?>) c).stream() : Stream.of(c))
+            .collect(Collectors.toList());
     switch (toNumType) {
       case DOUBLE:
       case FLOAT:
         if (isFloatOrDouble(fieldValues, Locale.ROOT) == null) {
-          throw new SolrException(SolrException.ErrorCode.BAD_REQUEST,
-              String.format(Locale.ROOT, TYPE_CHANGE_ERROR, toNumType.name(), field.getName(), toType.getTypeName()));
+          throw new SolrException(
+              SolrException.ErrorCode.BAD_REQUEST,
+              String.format(
+                  Locale.ROOT,
+                  TYPE_CHANGE_ERROR,
+                  toNumType.name(),
+                  field.getName(),
+                  toType.getTypeName()));
         }
         break;
       case LONG:
       case INTEGER:
         if (isIntOrLong(fieldValues, Locale.ROOT) == null) {
-          throw new SolrException(SolrException.ErrorCode.BAD_REQUEST,
-              String.format(Locale.ROOT, TYPE_CHANGE_ERROR, toNumType.name(), field.getName(), toType.getTypeName()));
+          throw new SolrException(
+              SolrException.ErrorCode.BAD_REQUEST,
+              String.format(
+                  Locale.ROOT,
+                  TYPE_CHANGE_ERROR,
+                  toNumType.name(),
+                  field.getName(),
+                  toType.getTypeName()));
         }
         break;
       case DATE:
         if (!isDateTime(fieldValues)) {
-          throw new SolrException(SolrException.ErrorCode.BAD_REQUEST,
-              String.format(Locale.ROOT, TYPE_CHANGE_ERROR, toNumType.name(), field.getName(), toType.getTypeName()));
+          throw new SolrException(
+              SolrException.ErrorCode.BAD_REQUEST,
+              String.format(
+                  Locale.ROOT,
+                  TYPE_CHANGE_ERROR,
+                  toNumType.name(),
+                  field.getName(),
+                  toType.getTypeName()));
         }
         break;
     }
   }
 
   @Override
-  public Optional<SchemaField> suggestField(String fieldName, List<Object> sampleValues, IndexSchema schema, List<String> langs) {
+  public Optional<SchemaField> suggestField(
+      String fieldName, List<Object> sampleValues, IndexSchema schema, List<String> langs) {
 
-    // start by looking at the fieldName and seeing if there is a dynamic field in the schema that already applies
+    // start by looking at the fieldName and seeing if there is a dynamic field in the schema that
+    // already applies
     if (schema.isDynamicField(fieldName)) {
       return Optional.of(schema.getFieldOrNull(fieldName));
     }
@@ -139,13 +170,15 @@ public class DefaultSchemaSuggester implements SchemaSuggester {
       throw new IllegalStateException("FieldType '" + fieldTypeName + "' not found in the schema!");
     }
 
-    Map<String, String> fieldProps = guessFieldProps(fieldName, fieldType, sampleValues, isMV, schema);
+    Map<String, String> fieldProps =
+        guessFieldProps(fieldName, fieldType, sampleValues, isMV, schema);
     SchemaField schemaField = schema.newField(fieldName, fieldTypeName, fieldProps);
     return Optional.of(schemaField);
   }
 
   @Override
-  public ManagedIndexSchema adaptExistingFieldToData(SchemaField schemaField, List<Object> sampleValues, ManagedIndexSchema schema) {
+  public ManagedIndexSchema adaptExistingFieldToData(
+      SchemaField schemaField, List<Object> sampleValues, ManagedIndexSchema schema) {
     // Promote a single-valued to multi-valued if needed
     if (!schemaField.multiValued() && isMultiValued(sampleValues)) {
       // this existing field needs to be promoted to multi-valued
@@ -153,43 +186,56 @@ public class DefaultSchemaSuggester implements SchemaSuggester {
       fieldProps.add("multiValued", true);
       fieldProps.remove("name");
       fieldProps.remove("type");
-      schema = schema.replaceField(schemaField.getName(), schemaField.getType(), fieldProps.asShallowMap());
+      schema =
+          schema.replaceField(
+              schemaField.getName(), schemaField.getType(), fieldProps.asShallowMap());
     }
-    // TODO: other "healing" type operations here ... but we have to be careful about overriding explicit user changes
-    // such as a user making a text field a string field, we wouldn't want to revert that field back to text
+    // TODO: other "healing" type operations here ... but we have to be careful about overriding
+    // explicit user changes such as a user making a text field a string field, we wouldn't want to
+    // revert that field back to text
     return schema;
   }
 
   @Override
   public Map<String, List<Object>> transposeDocs(List<SolrInputDocument> docs) {
     Map<String, List<Object>> mapByField = new HashMap<>();
-    docs.forEach(doc -> doc.getFieldNames().forEach(f -> {
-      // skip the version field on incoming docs
-      if (!VERSION_FIELD.equals(f)) {
-        List<Object> values = mapByField.computeIfAbsent(f, k -> new LinkedList<>());
-        Collection<Object> fieldValues = doc.getFieldValues(f);
-        if (fieldValues != null && !fieldValues.isEmpty()) {
-          if (fieldValues.size() == 1) {
-            // flatten so every field doesn't end up multi-valued
-            values.add(fieldValues.iterator().next());
-          } else {
-            // truly multi-valued
-            values.add(fieldValues);
-          }
-        }
-      }
-    }));
+    docs.forEach(
+        doc ->
+            doc.getFieldNames()
+                .forEach(
+                    f -> {
+                      // skip the version field on incoming docs
+                      if (!VERSION_FIELD.equals(f)) {
+                        List<Object> values = mapByField.computeIfAbsent(f, k -> new ArrayList<>());
+                        Collection<Object> fieldValues = doc.getFieldValues(f);
+                        if (fieldValues != null && !fieldValues.isEmpty()) {
+                          if (fieldValues.size() == 1) {
+                            // flatten so every field doesn't end up multi-valued
+                            values.add(fieldValues.iterator().next());
+                          } else {
+                            // truly multi-valued
+                            values.add(fieldValues);
+                          }
+                        }
+                      }
+                    }));
     return mapByField;
   }
 
-  protected String guessFieldType(String fieldName, final List<Object> sampleValues, IndexSchema schema, boolean isMV, Locale locale) {
+  protected String guessFieldType(
+      String fieldName,
+      final List<Object> sampleValues,
+      IndexSchema schema,
+      boolean isMV,
+      Locale locale) {
     String type = null;
 
     // flatten values to a single stream for easier analysis; also remove nulls
-    List<Object> flattened = sampleValues.stream()
-        .flatMap(c -> (c instanceof Collection) ? ((Collection<?>) c).stream() : Stream.of(c))
-        .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+    List<Object> flattened =
+        sampleValues.stream()
+            .flatMap(c -> (c instanceof Collection) ? ((Collection<?>) c).stream() : Stream.of(c))
+            .filter(Objects::nonNull)
+            .collect(Collectors.toList());
 
     if (isBoolean(flattened)) {
       type = isMV ? "booleans" : "boolean";
@@ -247,14 +293,18 @@ public class DefaultSchemaSuggester implements SchemaSuggester {
 
     // don't want to choose text for fields where string will do
     // if most of the sample values are unique but only a few terms, then it's likely a text field
-    return (maxLength > 60 || maxTerms > 12 || (maxTerms > 4 && values.size() >= 10 && ((float) Sets.newHashSet(values).size() / values.size()) > 0.9f));
+    return (maxLength > 60
+        || maxTerms > 12
+        || (maxTerms > 4
+            && values.size() >= 10
+            && ((float) Set.of(values).size() / values.size()) > 0.9f));
   }
 
   protected String isFloatOrDouble(List<Object> values, Locale locale) {
     NumberFormat format = NumberFormat.getInstance(locale);
     format.setParseIntegerOnly(false);
     format.setRoundingMode(RoundingMode.CEILING);
-    //boolean isFloat = true;
+    // boolean isFloat = true;
     for (Object next : values) {
       Object parsed = ParseDoubleFieldUpdateProcessorFactory.parsePossibleDouble(next, format);
       if (parsed == null) {
@@ -283,7 +333,9 @@ public class DefaultSchemaSuggester implements SchemaSuggester {
 
   protected boolean isBoolean(List<Object> values) {
     for (Object next : values) {
-      Object parsed = ParseBooleanFieldUpdateProcessorFactory.parsePossibleBoolean(next, caseSensitive, trueValues, falseValues);
+      Object parsed =
+          ParseBooleanFieldUpdateProcessorFactory.parsePossibleBoolean(
+              next, caseSensitive, trueValues, falseValues);
       if (parsed == null) {
         return false;
       }
@@ -309,8 +361,9 @@ public class DefaultSchemaSuggester implements SchemaSuggester {
       }
     }
 
-    // if all values are less than some smallish threshold, then it's likely this field holds small numbers
-    // but be very conservative here as it's simply an optimization and we can always fall back to long
+    // if all values are less than some smallish threshold, then it's likely this field holds small
+    // numbers but be very conservative here as it's simply an optimization and we can always fall
+    // back to long
     return maxLong < 10000 ? "pint" : "plong";
   }
 
@@ -320,7 +373,9 @@ public class DefaultSchemaSuggester implements SchemaSuggester {
     }
 
     for (Object next : values) {
-      Object parsedDate = ParseDateFieldUpdateProcessorFactory.parsePossibleDate(next, dateTimeFormatters, new ParsePosition(0));
+      Object parsedDate =
+          ParseDateFieldUpdateProcessorFactory.parsePossibleDate(
+              next, dateTimeFormatters, new ParsePosition(0));
       if (parsedDate == null) {
         // not a date value
         return false;
@@ -329,6 +384,7 @@ public class DefaultSchemaSuggester implements SchemaSuggester {
     return true;
   }
 
+  @Override
   public boolean isMultiValued(String name, List<SolrInputDocument> docs) {
     Map<String, List<Object>> transposed = transposeDocs(docs);
     List<Object> sampleValues = transposed.get(name);
@@ -344,7 +400,12 @@ public class DefaultSchemaSuggester implements SchemaSuggester {
     return false;
   }
 
-  protected Map<String, String> guessFieldProps(String fieldName, FieldType fieldType, List<Object> sampleValues, boolean isMV, IndexSchema schema) {
+  protected Map<String, String> guessFieldProps(
+      String fieldName,
+      FieldType fieldType,
+      List<Object> sampleValues,
+      boolean isMV,
+      IndexSchema schema) {
     Map<String, String> props = new HashMap<>();
     props.put("indexed", "true");
 
@@ -403,8 +464,14 @@ public class DefaultSchemaSuggester implements SchemaSuggester {
     }
 
     for (String pattern : dateTimePatterns) {
-      DateTimeFormatter formatter = new DateTimeFormatterBuilder().parseLenient().parseCaseInsensitive()
-          .appendPattern(pattern).toFormatter(locale).withResolverStyle(ResolverStyle.LENIENT).withZone(defaultTimeZone);
+      DateTimeFormatter formatter =
+          new DateTimeFormatterBuilder()
+              .parseLenient()
+              .parseCaseInsensitive()
+              .appendPattern(pattern)
+              .toFormatter(locale)
+              .withResolverStyle(ResolverStyle.LENIENT)
+              .withZone(defaultTimeZone);
       validateFormatter(formatter);
       dateTimeFormatters.add(formatter);
     }
@@ -434,9 +501,15 @@ public class DefaultSchemaSuggester implements SchemaSuggester {
       for (String val : falseValuesParam) {
         final String falseVal = caseSensitive ? val : val.toLowerCase(Locale.ROOT);
         if (trueValues.contains(falseVal)) {
-          throw new SolrException(SolrException.ErrorCode.SERVER_ERROR,
-              "Param '" + FALSE_VALUES_PARAM + "' contains a value also in param '" + TRUE_VALUES_PARAM
-                  + "': '" + val + "'");
+          throw new SolrException(
+              SolrException.ErrorCode.SERVER_ERROR,
+              "Param '"
+                  + FALSE_VALUES_PARAM
+                  + "' contains a value also in param '"
+                  + TRUE_VALUES_PARAM
+                  + "': '"
+                  + val
+                  + "'");
         }
         falseValues.add(falseVal);
       }
