@@ -15,55 +15,57 @@
  * limitations under the License.
  */
 package org.apache.solr.schema;
+
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.lang.invoke.MethodHandles;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
-
-import org.apache.solr.common.util.SuppressForbidden;
-import org.noggit.JSONParser;
 import org.apache.lucene.util.ResourceLoader;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrException.ErrorCode;
+import org.apache.solr.common.util.SuppressForbidden;
+import org.noggit.JSONParser;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * <p>
- * Exchange Rates Provider for {@link CurrencyField} and {@link CurrencyFieldType} capable of fetching &amp; 
- * parsing the freely available exchange rates from openexchangerates.org
- * </p>
- * <p>
- * Configuration Options:
- * </p>
+ * Exchange Rates Provider for {@link CurrencyField} and {@link CurrencyFieldType} capable of
+ * fetching &amp; parsing the freely available exchange rates from openexchangerates.org
+ *
+ * <p>Configuration Options:
+ *
  * <ul>
- *  <li><code>ratesFileLocation</code> - A file path or absolute URL specifying the JSON data to load (mandatory)</li>
- *  <li><code>refreshInterval</code> - How frequently (in minutes) to reload the exchange rate data (default: 1440)</li>
+ *   <li><code>ratesFileLocation</code> - A file path or absolute URL specifying the JSON data to
+ *       load (mandatory)
+ *   <li><code>refreshInterval</code> - How frequently (in minutes) to reload the exchange rate data
+ *       (default: 1440)
  * </ul>
- * <p>
- * <b>Disclaimer:</b> This data is collected from various providers and provided free of charge
- * for informational purposes only, with no guarantee whatsoever of accuracy, validity,
- * availability or fitness for any purpose; use at your own risk. Other than that - have
- * fun, and please share/watch/fork if you think data like this should be free!
- * </p>
- * @see <a href="https://openexchangerates.org/documentation">openexchangerates.org JSON Data Format</a>
+ *
+ * <p><b>Disclaimer:</b> This data is collected from various providers and provided free of charge
+ * for informational purposes only, with no guarantee whatsoever of accuracy, validity, availability
+ * or fitness for any purpose; use at your own risk. Other than that - have fun, and please
+ * share/watch/fork if you think data like this should be free!
+ *
+ * @see <a href="https://openexchangerates.org/documentation">openexchangerates.org JSON Data
+ *     Format</a>
  */
 public class OpenExchangeRatesOrgProvider implements ExchangeRateProvider {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
-  protected static final String PARAM_RATES_FILE_LOCATION   = "ratesFileLocation";
-  protected static final String PARAM_REFRESH_INTERVAL      = "refreshInterval";
-  protected static final String DEFAULT_REFRESH_INTERVAL    = "1440";
-  
+  protected static final String PARAM_RATES_FILE_LOCATION = "ratesFileLocation";
+  protected static final String PARAM_REFRESH_INTERVAL = "refreshInterval";
+  protected static final String DEFAULT_REFRESH_INTERVAL = "1440";
+
   protected String ratesFileLocation;
   // configured in minutes, but stored in seconds for quicker math
   protected int refreshIntervalSeconds;
   protected ResourceLoader resourceLoader;
-  
+
   protected OpenExchangeRates rates;
 
   /**
@@ -79,11 +81,13 @@ public class OpenExchangeRatesOrgProvider implements ExchangeRateProvider {
   @Override
   public double getExchangeRate(String sourceCurrencyCode, String targetCurrencyCode) {
     if (rates == null) {
-      throw new SolrException(SolrException.ErrorCode.SERVICE_UNAVAILABLE, "Rates not initialized.");
+      throw new SolrException(
+          SolrException.ErrorCode.SERVICE_UNAVAILABLE, "Rates not initialized.");
     }
-      
+
     if (sourceCurrencyCode == null || targetCurrencyCode == null) {
-      throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Cannot get exchange rate; currency was null.");
+      throw new SolrException(
+          SolrException.ErrorCode.BAD_REQUEST, "Cannot get exchange rate; currency was null.");
     }
 
     reloadIfExpired();
@@ -92,17 +96,24 @@ public class OpenExchangeRatesOrgProvider implements ExchangeRateProvider {
     Double target = rates.getRates().get(targetCurrencyCode);
 
     if (source == null || target == null) {
-      throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, 
-          "No available conversion rate from " + sourceCurrencyCode + " to " + targetCurrencyCode + ". "
-          + "Available rates are "+listAvailableCurrencies());
+      throw new SolrException(
+          SolrException.ErrorCode.BAD_REQUEST,
+          "No available conversion rate from "
+              + sourceCurrencyCode
+              + " to "
+              + targetCurrencyCode
+              + ". "
+              + "Available rates are "
+              + listAvailableCurrencies());
     }
-    
-    return target / source;  
+
+    return target / source;
   }
 
-  @SuppressForbidden(reason = "Need currentTimeMillis, for comparison with stamp in an external file")
+  @SuppressForbidden(
+      reason = "Need currentTimeMillis, for comparison with stamp in an external file")
   private void reloadIfExpired() {
-    if ((rates.getTimestamp() + refreshIntervalSeconds)*1000 < System.currentTimeMillis()) {
+    if ((rates.getTimestamp() + refreshIntervalSeconds) * 1000 < System.currentTimeMillis()) {
       log.debug("Refresh interval has expired. Refreshing exchange rates.");
       reload();
     }
@@ -111,11 +122,10 @@ public class OpenExchangeRatesOrgProvider implements ExchangeRateProvider {
   @Override
   public boolean equals(Object o) {
     if (this == o) return true;
-    if (o == null || getClass() != o.getClass()) return false;
+    if (!(o instanceof OpenExchangeRatesOrgProvider)) return false;
 
     OpenExchangeRatesOrgProvider that = (OpenExchangeRatesOrgProvider) o;
-
-    return !(rates != null ? !rates.equals(that.rates) : that.rates != null);
+    return Objects.equals(rates, that.rates);
   }
 
   @Override
@@ -125,13 +135,12 @@ public class OpenExchangeRatesOrgProvider implements ExchangeRateProvider {
 
   @Override
   public String toString() {
-    return "["+this.getClass().getName()+" : " + rates.getRates().size() + " rates.]";
+    return "[" + this.getClass().getName() + " : " + rates.getRates().size() + " rates.]";
   }
 
   @Override
   public Set<String> listAvailableCurrencies() {
-    if (rates == null)
-      throw new SolrException(ErrorCode.SERVER_ERROR, "Rates not initialized");
+    if (rates == null) throw new SolrException(ErrorCode.SERVER_ERROR, "Rates not initialized");
     return rates.getRates().keySet();
   }
 
@@ -142,11 +151,11 @@ public class OpenExchangeRatesOrgProvider implements ExchangeRateProvider {
     try {
       log.debug("Reloading exchange rates from {}", ratesFileLocation);
       try {
-        ratesJsonStream = (new URL(ratesFileLocation)).openStream();
+        ratesJsonStream = (new URI(ratesFileLocation).toURL()).openStream();
       } catch (Exception e) {
         ratesJsonStream = resourceLoader.openResource(ratesFileLocation);
       }
-        
+
       rates = new OpenExchangeRates(ratesJsonStream);
       return true;
     } catch (Exception e) {
@@ -163,25 +172,29 @@ public class OpenExchangeRatesOrgProvider implements ExchangeRateProvider {
   }
 
   @Override
-  public void init(Map<String,String> params) throws SolrException {
+  public void init(Map<String, String> params) throws SolrException {
     try {
       ratesFileLocation = params.get(PARAM_RATES_FILE_LOCATION);
       if (null == ratesFileLocation) {
-        throw new SolrException(ErrorCode.SERVER_ERROR, "Init param must be specified: " + PARAM_RATES_FILE_LOCATION);
+        throw new SolrException(
+            ErrorCode.SERVER_ERROR, "Init param must be specified: " + PARAM_RATES_FILE_LOCATION);
       }
-      int refreshInterval = Integer.parseInt(getParam(params.get(PARAM_REFRESH_INTERVAL), DEFAULT_REFRESH_INTERVAL));
-      // Force a refresh interval of minimum one hour, since the API does not offer better resolution
+      int refreshInterval =
+          Integer.parseInt(getParam(params.get(PARAM_REFRESH_INTERVAL), DEFAULT_REFRESH_INTERVAL));
+      // Force a refresh interval of minimum one hour, since the API does not offer better
+      // resolution
       if (refreshInterval < 60) {
         refreshInterval = 60;
-        log.warn("Specified refreshInterval was too small. Setting to 60 minutes which is the update rate of openexchangerates.org");
+        log.warn(
+            "Specified refreshInterval was too small. Setting to 60 minutes which is the update rate of openexchangerates.org");
       }
-      log.debug("Initialized with rates={}, refreshInterval={}.", ratesFileLocation, refreshInterval);
+      log.debug(
+          "Initialized with rates={}, refreshInterval={}.", ratesFileLocation, refreshInterval);
       refreshIntervalSeconds = refreshInterval * 60;
     } catch (SolrException e1) {
       throw e1;
     } catch (Exception e2) {
-      throw new SolrException(ErrorCode.SERVER_ERROR, "Error initializing: " + 
-                              e2.getMessage(), e2);
+      throw new SolrException(ErrorCode.SERVER_ERROR, "Error initializing: " + e2.getMessage(), e2);
     } finally {
       // Removing config params custom to us
       params.remove(PARAM_RATES_FILE_LOCATION);
@@ -194,14 +207,12 @@ public class OpenExchangeRatesOrgProvider implements ExchangeRateProvider {
     resourceLoader = loader;
     reload();
   }
-  
+
   private String getParam(String param, String defaultParam) {
     return param == null ? defaultParam : param;
   }
-  
-  /**
-   * A simple class encapsulating the JSON data from openexchangerates.org
-   */
+
+  /** A simple class encapsulating the JSON data from openexchangerates.org */
   static class OpenExchangeRates {
     private Map<String, Double> rates;
     private String baseCurrency;
@@ -209,40 +220,40 @@ public class OpenExchangeRatesOrgProvider implements ExchangeRateProvider {
     private String disclaimer;
     private String license;
     private JSONParser parser;
-    
+
     public OpenExchangeRates(InputStream ratesStream) throws IOException {
       parser = new JSONParser(new InputStreamReader(ratesStream, StandardCharsets.UTF_8));
       rates = new HashMap<>();
-      
+
       int ev;
       do {
         ev = parser.nextEvent();
-        switch( ev ) {
+        switch (ev) {
           case JSONParser.STRING:
-            if( parser.wasKey() ) {
+            if (parser.wasKey()) {
               String key = parser.getString();
-              if(key.equals("disclaimer")) {
+              if (key.equals("disclaimer")) {
                 parser.nextEvent();
                 disclaimer = parser.getString();
-              } else if(key.equals("license")) {
+              } else if (key.equals("license")) {
                 parser.nextEvent();
                 license = parser.getString();
-              } else if(key.equals("timestamp")) {
+              } else if (key.equals("timestamp")) {
                 parser.nextEvent();
                 timestamp = parser.getLong();
-              } else if(key.equals("base")) {
+              } else if (key.equals("base")) {
                 parser.nextEvent();
                 baseCurrency = parser.getString();
-              } else if(key.equals("rates")) {
+              } else if (key.equals("rates")) {
                 ev = parser.nextEvent();
-                assert(ev == JSONParser.OBJECT_START);
+                assert (ev == JSONParser.OBJECT_START);
                 ev = parser.nextEvent();
                 while (ev != JSONParser.OBJECT_END) {
                   String curr = parser.getString();
                   ev = parser.nextEvent();
                   Double rate = parser.getDouble();
                   rates.put(curr, rate);
-                  ev = parser.nextEvent();                  
+                  ev = parser.nextEvent();
                 }
               } else {
                 log.warn("Unknown key {}", key);
@@ -252,7 +263,7 @@ public class OpenExchangeRatesOrgProvider implements ExchangeRateProvider {
               log.warn("Expected key, got {}", JSONParser.getEventString(ev));
               break;
             }
-             
+
           case JSONParser.OBJECT_END:
           case JSONParser.OBJECT_START:
           case JSONParser.EOF:
@@ -264,17 +275,20 @@ public class OpenExchangeRatesOrgProvider implements ExchangeRateProvider {
             }
             break;
         }
-      } while( ev != JSONParser.EOF);
+      } while (ev != JSONParser.EOF);
     }
 
     public Map<String, Double> getRates() {
       return rates;
     }
-    
+
     public long getTimestamp() {
       return timestamp;
     }
-    /** Package protected method for test purposes
+
+    /**
+     * Package protected method for test purposes
+     *
      * @lucene.internal
      */
     void setTimestamp(long timestamp) {
