@@ -17,6 +17,10 @@
 
 package org.apache.solr.security;
 
+import static java.util.Collections.singleton;
+import static java.util.Collections.singletonList;
+import static org.apache.solr.common.params.CommonParams.NAME;
+
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
@@ -27,14 +31,10 @@ import java.util.Set;
 import java.util.function.Function;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-
-import com.google.common.collect.ImmutableSet;
+import java.util.stream.Stream;
 import org.apache.solr.common.SolrException;
+import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.util.Utils;
-
-import static java.util.Collections.singleton;
-import static java.util.Collections.singletonList;
-import static org.apache.solr.common.params.CommonParams.NAME;
 
 class Permission {
   String name;
@@ -43,28 +43,31 @@ class Permission {
   PermissionNameProvider.Name wellknownName;
   Map<?, ?> originalConfig;
 
-  private Permission() {
-  }
+  private Permission() {}
 
   static Permission load(Map<?, ?> m) {
     Permission p = new Permission();
     p.originalConfig = new LinkedHashMap<>(m);
     String name = (String) m.get(NAME);
-    if (!m.containsKey("role")) throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "role not specified");
+    if (!m.containsKey("role"))
+      throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "role not specified");
     p.role = readValueAsSet(m, "role");
-    if (PermissionNameProvider.Name.get(name)!= null) {
+    if (PermissionNameProvider.Name.get(name) != null) {
       p.wellknownName = PermissionNameProvider.Name.get(name);
-      HashSet<String> disAllowed = new HashSet<>(knownKeys);
-      disAllowed.remove("role");//these are the only
-      disAllowed.remove(NAME);//allowed keys for well-known permissions
-      disAllowed.remove("collection");//allowed keys for well-known permissions
-      disAllowed.remove("index");
-      for (String s : disAllowed) {
+      for (String s : customPermissionAdditionalKeys) {
         if (m.containsKey(s))
-          throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, s + " is not a valid key for the permission : " + name);
+          throw new SolrException(
+              SolrException.ErrorCode.BAD_REQUEST,
+              s + " is not a valid key for the permission : " + name);
       }
-
+    } else if (!m.containsKey(CommonParams.PATH)) {
+      throw new SolrException(
+          SolrException.ErrorCode.BAD_REQUEST,
+          "Permission with name "
+              + name
+              + " is neither a pre-defined permission nor qualifies as a custom permission");
     }
+
     p.name = name;
     p.path = readSetSmart(name, m, "path");
     p.collections = readSetSmart(name, m, "collection");
@@ -78,36 +81,44 @@ class Permission {
           p.params.put(e.getKey(), (String[] val) -> val == null);
         } else {
           @SuppressWarnings("unchecked")
-          List<String> patternStrs = e.getValue() instanceof List ?
-              (List) e.getValue() :
-              singletonList(e.getValue().toString());
-          List<?> patterns = patternStrs.stream()
-              .map(it -> it.startsWith("REGEX:") ? Pattern.compile(it.substring("REGEX:".length())) : it)
-              .collect(Collectors.toList());
-          p.params.put(e.getKey(), val -> {
-            if (val == null) return false;
-            for (Object pattern : patterns) {
-              for (String s : val) {
-                if (pattern instanceof String) {
-                  if (pattern.equals(s)) return true;
-                } else if (pattern instanceof Pattern) {
-                  if (((Pattern) pattern).matcher(s).find()) return true;
+          List<String> patternStrs =
+              e.getValue() instanceof List
+                  ? (List) e.getValue()
+                  : singletonList(e.getValue().toString());
+          List<?> patterns =
+              patternStrs.stream()
+                  .map(
+                      it ->
+                          it.startsWith("REGEX:")
+                              ? Pattern.compile(it.substring("REGEX:".length()))
+                              : it)
+                  .collect(Collectors.toList());
+          p.params.put(
+              e.getKey(),
+              val -> {
+                if (val == null) return false;
+                for (Object pattern : patterns) {
+                  for (String s : val) {
+                    if (pattern instanceof String) {
+                      if (pattern.equals(s)) return true;
+                    } else if (pattern instanceof Pattern) {
+                      if (((Pattern) pattern).matcher(s).find()) return true;
+                    }
+                  }
                 }
-              }
-            }
-            return false;
-          });
+                return false;
+              });
         }
       }
     }
     return p;
   }
 
-  /**
-   * This checks for the defaults available other rules for the keys
-   */
+  /** This checks for the defaults available other rules for the keys */
   private static Set<String> readSetSmart(String permissionName, Map<?, ?> m, String key) {
-    if(PermissionNameProvider.values.containsKey(permissionName) && !m.containsKey(key) && "collection".equals(key)) {
+    if (PermissionNameProvider.values.containsKey(permissionName)
+        && !m.containsKey(key)
+        && "collection".equals(key)) {
       return PermissionNameProvider.Name.get(permissionName).collName;
     }
     Set<String> set = readValueAsSet(m, key);
@@ -119,19 +130,19 @@ class Permission {
     }
     return set == null ? singleton(null) : set;
   }
+
   /**
-   * read a key value as a set. if the value is a single string ,
-   * return a singleton set
+   * read a key value as a set. if the value is a single string, return a singleton set
    *
-   * @param m   the map from which to lookup
+   * @param m the map from which to lookup
    * @param key the key with which to do lookup
    */
   static Set<String> readValueAsSet(Map<?, ?> m, String key) {
     Set<String> result = new HashSet<>();
     Object val = m.get(key);
     if (val == null) {
-      if("collection".equals(key)) {
-        //for collection collection: null means a core admin/ collection admin request
+      if ("collection".equals(key)) {
+        // for collection collection: null means a core admin/ collection admin request
         // otherwise it means a request where collection name is ignored
         return m.containsKey(key) ? singleton(null) : singleton("*");
       }
@@ -150,10 +161,15 @@ class Permission {
 
   @Override
   public String toString() {
-   return Utils.toJSONString(originalConfig);
+    return Utils.toJSONString(originalConfig);
   }
 
-  static final Set<String> knownKeys = ImmutableSet.of("collection", "role", "params", "path", "method", NAME,"index");
-  public static final Set<String> HTTP_METHODS = ImmutableSet.of("GET", "POST", "DELETE", "PUT", "HEAD");
-
+  static final Set<String> predefinedPermissionAllowedKeys =
+      Set.of("collection", "role", NAME, "index");
+  static final Set<String> customPermissionAdditionalKeys = Set.of("method", "path", "params");
+  static final Set<String> knownKeys =
+      Stream.concat(
+              predefinedPermissionAllowedKeys.stream(), customPermissionAdditionalKeys.stream())
+          .collect(Collectors.toUnmodifiableSet());
+  public static final Set<String> HTTP_METHODS = Set.of("GET", "POST", "DELETE", "PUT", "HEAD");
 }
