@@ -16,22 +16,27 @@
  */
 package org.apache.solr.response.transform;
 
+import static java.util.Collections.singletonList;
+import static java.util.Collections.singletonMap;
+import static org.apache.solr.security.Sha256AuthenticationProvider.getSaltedHashedValue;
+
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
-import java.nio.charset.Charset;
+import java.net.URLConnection;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.HashMap;
+import java.util.Base64;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
-
-import org.apache.commons.io.IOUtils;
 import org.apache.solr.JSONTestUtil;
+import org.apache.solr.client.solrj.SolrRequest;
+import org.apache.solr.client.solrj.SolrResponse;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.request.CollectionAdminRequest;
@@ -45,192 +50,361 @@ import org.apache.solr.common.SolrDocumentList;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.util.ContentStreamBase;
+import org.apache.solr.common.util.Utils;
+import org.apache.solr.security.BasicAuthPlugin;
+import org.apache.solr.security.RuleBasedAuthorizationPlugin;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
 @org.apache.solr.SolrTestCaseJ4.SuppressSSL()
 public class TestSubQueryTransformerDistrib extends SolrCloudTestCase {
-  
+
   private static final String support = "These guys help customers";
   private static final String engineering = "These guys develop stuff";
-  final static String people = "people";
-  final static String depts = "departments";
+  static final String people = "people";
+  static final String depts = "departments";
   private static boolean differentUniqueId;
-  
+  private static final String USER = "solr";
+  private static final String PASS = "SolrRocksAgain";
+
   @BeforeClass
   public static void setupCluster() throws Exception {
-    
+
     differentUniqueId = random().nextBoolean();
-    
-    final Path configDir = Paths.get(TEST_HOME(), "collection1", "conf");
+
+    final Path configDir = TEST_COLL1_CONF();
 
     String configName = "solrCloudCollectionConfig";
     int nodeCount = 5;
+
+    final String SECURITY_JSON =
+        Utils.toJSONString(
+            Map.of(
+                "authorization",
+                Map.of(
+                    "class",
+                    RuleBasedAuthorizationPlugin.class.getName(),
+                    "user-role",
+                    singletonMap(USER, "admin"),
+                    "permissions",
+                    singletonList(Map.of("name", "all", "role", "admin"))),
+                "authentication",
+                Map.of(
+                    "class",
+                    BasicAuthPlugin.class.getName(),
+                    "blockUnknown",
+                    true,
+                    "credentials",
+                    singletonMap(USER, getSaltedHashedValue(PASS)),
+                    "forwardCredentials", // forward basic auth credentials during internode
+                    // requests instead of relying on PKI authentication; the test should pass
+                    // regardless of the setting here, but "true" is the more interesting case that
+                    // demonstrates that basic auth credentials are being properly handled in the
+                    // context of a distributed subquery
+                    true)));
+
     configureCluster(nodeCount)
-       .addConfig(configName, configDir)
-       .configure();
-    
-    Map<String, String> collectionProperties = new HashMap<>();
-    collectionProperties.put("config", "solrconfig-doctransformers.xml" );
-    collectionProperties.put("schema", "schema-docValuesJoin.xml"); 
+        .addConfig(configName, configDir)
+        .withSecurityJson(SECURITY_JSON)
+        .configure();
 
     int shards = 2;
-    int replicas = 2 ;
-    CollectionAdminRequest.createCollection(people, configName, shards, replicas)
-        .withProperty("config", "solrconfig-doctransformers.xml")
-        .setPerReplicaState(SolrCloudTestCase.USE_PER_REPLICA_STATE)
-        .withProperty("schema", "schema-docValuesJoin.xml")
+    int replicas = 2;
+    withBasicAuth(
+            CollectionAdminRequest.createCollection(people, configName, shards, replicas)
+                .withProperty("config", "solrconfig-doctransformers.xml")
+                .withProperty("schema", "schema-docValuesJoin.xml"))
         .process(cluster.getSolrClient());
 
-    CollectionAdminRequest.createCollection(depts, configName, shards, replicas)
-        .setPerReplicaState(SolrCloudTestCase.USE_PER_REPLICA_STATE)
-        .withProperty("config", "solrconfig-doctransformers.xml")
-        .withProperty("schema", 
-              differentUniqueId ? "schema-minimal-with-another-uniqkey.xml":
-                                  "schema-docValuesJoin.xml")
+    withBasicAuth(
+            CollectionAdminRequest.createCollection(depts, configName, shards, replicas)
+                .withProperty("config", "solrconfig-doctransformers.xml")
+                .withProperty(
+                    "schema",
+                    differentUniqueId
+                        ? "schema-minimal-with-another-uniqkey.xml"
+                        : "schema-docValuesJoin.xml"))
         .process(cluster.getSolrClient());
 
     CloudSolrClient client = cluster.getSolrClient();
-    client.setDefaultCollection(people);
-    
-    ZkStateReader zkStateReader = client.getZkStateReader();
+
+    ZkStateReader zkStateReader = ZkStateReader.from(client);
     AbstractDistribZkTestBase.waitForRecoveriesToFinish(people, zkStateReader, true, true, 30);
-    
+
     AbstractDistribZkTestBase.waitForRecoveriesToFinish(depts, zkStateReader, false, true, 30);
   }
-  
-  
+
   @SuppressWarnings("serial")
   @Test
   public void test() throws Exception {
     int peopleMultiplier = atLeast(1);
     int deptMultiplier = atLeast(1);
-    
+
     createIndex(people, peopleMultiplier, depts, deptMultiplier);
-    
+
     Random random1 = random();
-    
-    final ModifiableSolrParams params = params(
-        new String[]{"q","name_s:dave", "indent","true",
-            "fl","*,depts:[subquery "+((random1.nextBoolean() ? "" : "separator=,"))+"]",
-            "rows","" + peopleMultiplier,
-            "depts.q","{!terms f=dept_id_s v=$row.dept_ss_dv "+((random1.nextBoolean() ? "" : "separator=,"))+"}",
-            "depts.fl","text_t"+(differentUniqueId?",id:notid":""),
-            "depts.sort", "dept_id_i desc",
-            "depts.indent","true",
-            "depts.collection","departments",
-            differentUniqueId ? "depts.distrib.singlePass":"notnecessary","true",
-            "depts.rows",""+(deptMultiplier*2),
-            "depts.logParamsList","q,fl,rows,row.dept_ss_dv",
-            random().nextBoolean()?"depts.wt":"whatever",anyWt(),
-            random().nextBoolean()?"wt":"whatever",anyWt()});
+
+    final ModifiableSolrParams params =
+        params(
+            new String[] {
+              "q",
+              "name_s:dave",
+              "indent",
+              "true",
+              "fl",
+              "*,depts:[subquery " + ((random1.nextBoolean() ? "" : "separator=,")) + "]",
+              "rows",
+              "" + peopleMultiplier,
+              "depts.q",
+              "{!terms f=dept_id_s v=$row.dept_ss_dv "
+                  + ((random1.nextBoolean() ? "" : "separator=,"))
+                  + "}",
+              "depts.fl",
+              "text_t" + (differentUniqueId ? ",id:notid" : ""),
+              "depts.sort",
+              "dept_id_i desc",
+              "depts.indent",
+              "true",
+              "depts.collection",
+              "departments",
+              differentUniqueId ? "depts.distrib.singlePass" : "notnecessary",
+              "true",
+              "depts.rows",
+              "" + (deptMultiplier * 2),
+              "depts.logParamsList",
+              "q,fl,rows,row.dept_ss_dv",
+              random().nextBoolean() ? "depts.wt" : "whatever",
+              anyWt(),
+              random().nextBoolean() ? "wt" : "whatever",
+              anyWt()
+            });
 
     final SolrDocumentList hits;
     {
-      final QueryRequest qr = new QueryRequest(params);
-      final QueryResponse  rsp = new QueryResponse();
-      rsp.setResponse(cluster.getSolrClient().request(qr, people+","+depts));
+      final QueryRequest qr = withBasicAuth(new QueryRequest(params));
+      final QueryResponse rsp = new QueryResponse();
+      rsp.setResponse(cluster.getSolrClient().request(qr, people + "," + depts));
       hits = rsp.getResults();
-      
+
       assertEquals(peopleMultiplier, hits.getNumFound());
-      
+
       int engineerCount = 0;
       int supportCount = 0;
-      
-      for (int res : new int [] {0, (peopleMultiplier-1) /2, peopleMultiplier-1}) {
+
+      for (int res : new int[] {0, (peopleMultiplier - 1) / 2, peopleMultiplier - 1}) {
         SolrDocument doc = hits.get(res);
         assertEquals("dave", doc.getFieldValue("name_s_dv"));
         SolrDocumentList relDepts = (SolrDocumentList) doc.getFieldValue("depts");
-        assertEquals("dave works in both depts "+rsp,
-            deptMultiplier * 2, relDepts.getNumFound());
-        for (int deptN = 0 ; deptN < relDepts.getNumFound(); deptN++ ) {
+        assertEquals("dave works in both depts " + rsp, deptMultiplier * 2, relDepts.getNumFound());
+        for (int deptN = 0; deptN < relDepts.getNumFound(); deptN++) {
           SolrDocument deptDoc = relDepts.get(deptN);
           String actual = (String) deptDoc.get("text_t");
-          assertTrue(deptDoc + "should be either "+engineering +" or "+support,
-              (engineering.equals(actual) && ++engineerCount>0) || 
-                   (support.equals(actual) && ++supportCount>0));
+          assertTrue(
+              deptDoc + "should be either " + engineering + " or " + support,
+              (engineering.equals(actual) && ++engineerCount > 0)
+                  || (support.equals(actual) && ++supportCount > 0));
         }
       }
-      assertEquals(hits.toString(), engineerCount, supportCount); 
+      assertEquals(hits.toString(), engineerCount, supportCount);
     }
 
     params.set("wt", "json");
-    final URL node = new URL(cluster.getRandomJetty(random()).getBaseUrl().toString()
-     +"/"+people+"/select"+params.toQueryString());
+    final URL node =
+        URI.create(
+                cluster.getRandomJetty(random()).getBaseUrl().toString()
+                    + "/"
+                    + people
+                    + "/select"
+                    + params.toQueryString())
+            .toURL();
 
-    try(final InputStream jsonResponse = node.openStream()){
+    final URLConnection urlConnectionWithoutAuth = node.openConnection();
+    assertThrows(Exception.class, () -> urlConnectionWithoutAuth.getInputStream());
+    final URLConnection urlConnection = node.openConnection();
+    String basicAuth =
+        "Basic "
+            + new String(
+                Base64.getEncoder().encode((USER + ":" + PASS).getBytes(StandardCharsets.UTF_8)),
+                StandardCharsets.UTF_8);
+    urlConnection.setRequestProperty("Authorization", basicAuth);
+
+    try (final InputStream jsonResponse = urlConnection.getInputStream()) {
       final ByteArrayOutputStream outBuffer = new ByteArrayOutputStream();
-      IOUtils.copy(jsonResponse, outBuffer);
+      jsonResponse.transferTo(outBuffer);
 
-      final Object expected = ((SolrDocumentList) hits.get(0).getFieldValue("depts")).get(0).get("text_t");
-      final String err = JSONTestUtil.match("/response/docs/[0]/depts/docs/[0]/text_t"
-          ,outBuffer.toString(Charset.forName("UTF-8").toString()),
-          "\""+expected+"\"");
-      assertNull(err,err);
+      final Object expected =
+          ((SolrDocumentList) hits.get(0).getFieldValue("depts")).get(0).get("text_t");
+      final String err =
+          JSONTestUtil.match(
+              "/response/docs/[0]/depts/docs/[0]/text_t",
+              outBuffer.toString(StandardCharsets.UTF_8),
+              "\"" + expected + "\"");
+      assertNull(err, err);
     }
-    
   }
 
   private String anyWt() {
-    String[] wts = new String[]{"javabin","xml","json"};
+    String[] wts = new String[] {"javabin", "xml", "json"};
     return wts[random().nextInt(wts.length)];
   }
 
-
   private void createIndex(String people, int peopleMultiplier, String depts, int deptMultiplier)
       throws SolrServerException, IOException {
-    
-    int id=0;
-    List<String> peopleDocs = new ArrayList<>();
-    for (int p=0; p < peopleMultiplier; p++){
 
-      peopleDocs.add(add(doc("id", ""+id++,"name_s", "john", "title_s", "Director", 
-                                                      "dept_ss_dv","Engineering",
-                                                      "dept_i", "0",
-                                                      "dept_is", "0")));
-      peopleDocs.add(add(doc("id", ""+id++,"name_s", "mark", "title_s", "VP", 
-                                                         "dept_ss_dv","Marketing",
-                                                         "dept_i", "1",
-                                                         "dept_is", "1")));
-      peopleDocs.add(add(doc("id", ""+id++,"name_s", "nancy", "title_s", "MTS",
-                                                         "dept_ss_dv","Sales",
-                                                         "dept_i", "2",
-                                                         "dept_is", "2")));
-      peopleDocs.add(add(doc("id", ""+id++,"name_s", "dave", "title_s", "MTS", 
-                                                         "dept_ss_dv","Support", "dept_ss_dv","Engineering",
-                                                         "dept_i", "3",
-                                                         "dept_is", "3", "dept_is", "0")));
-      peopleDocs.add(add(doc("id", ""+id++,"name_s", "tina", "title_s", "VP", 
-                                                         "dept_ss_dv","Engineering",
-                                                         "dept_i", "0",
-                                                         "dept_is", "0")));
+    int id = 0;
+    List<String> peopleDocs = new ArrayList<>();
+    for (int p = 0; p < peopleMultiplier; p++) {
+
+      peopleDocs.add(
+          add(
+              doc(
+                  "id",
+                  "" + id++,
+                  "name_s",
+                  "john",
+                  "title_s",
+                  "Director",
+                  "dept_ss_dv",
+                  "Engineering",
+                  "dept_i",
+                  "0",
+                  "dept_is",
+                  "0")));
+      peopleDocs.add(
+          add(
+              doc(
+                  "id",
+                  "" + id++,
+                  "name_s",
+                  "mark",
+                  "title_s",
+                  "VP",
+                  "dept_ss_dv",
+                  "Marketing",
+                  "dept_i",
+                  "1",
+                  "dept_is",
+                  "1")));
+      peopleDocs.add(
+          add(
+              doc(
+                  "id",
+                  "" + id++,
+                  "name_s",
+                  "nancy",
+                  "title_s",
+                  "MTS",
+                  "dept_ss_dv",
+                  "Sales",
+                  "dept_i",
+                  "2",
+                  "dept_is",
+                  "2")));
+      peopleDocs.add(
+          add(
+              doc(
+                  "id",
+                  "" + id++,
+                  "name_s",
+                  "dave",
+                  "title_s",
+                  "MTS",
+                  "dept_ss_dv",
+                  "Support",
+                  "dept_ss_dv",
+                  "Engineering",
+                  "dept_i",
+                  "3",
+                  "dept_is",
+                  "3",
+                  "dept_is",
+                  "0")));
+      peopleDocs.add(
+          add(
+              doc(
+                  "id",
+                  "" + id++,
+                  "name_s",
+                  "tina",
+                  "title_s",
+                  "VP",
+                  "dept_ss_dv",
+                  "Engineering",
+                  "dept_i",
+                  "0",
+                  "dept_is",
+                  "0")));
     }
 
     addDocs(people, peopleDocs);
 
     List<String> deptsDocs = new ArrayList<>();
-    String deptIdField = differentUniqueId? "notid":"id";
-    for (int d=0; d < deptMultiplier; d++) {
-      deptsDocs.add(add(doc(deptIdField,""+id++, "dept_id_s", "Engineering", "text_t",engineering, "salary_i_dv", "1000",
-                                     "dept_id_i", "0")));
-      deptsDocs.add(add(doc(deptIdField,""+id++, "dept_id_s", "Marketing", "text_t","These guys make you look good","salary_i_dv", "1500",
-                                     "dept_id_i", "1")));
-      deptsDocs.add(add(doc(deptIdField,""+id++, "dept_id_s", "Sales", "text_t","These guys sell stuff","salary_i_dv", "1600",
-                                    "dept_id_i", "2")));
-      deptsDocs.add(add(doc(deptIdField,""+id++, "dept_id_s", "Support", "text_t",support,"salary_i_dv", "800",
-                                    "dept_id_i", "3")));
-      
+    String deptIdField = differentUniqueId ? "notid" : "id";
+    for (int d = 0; d < deptMultiplier; d++) {
+      deptsDocs.add(
+          add(
+              doc(
+                  deptIdField,
+                  "" + id++,
+                  "dept_id_s",
+                  "Engineering",
+                  "text_t",
+                  engineering,
+                  "salary_i_dv",
+                  "1000",
+                  "dept_id_i",
+                  "0")));
+      deptsDocs.add(
+          add(
+              doc(
+                  deptIdField,
+                  "" + id++,
+                  "dept_id_s",
+                  "Marketing",
+                  "text_t",
+                  "These guys make you look good",
+                  "salary_i_dv",
+                  "1500",
+                  "dept_id_i",
+                  "1")));
+      deptsDocs.add(
+          add(
+              doc(
+                  deptIdField,
+                  "" + id++,
+                  "dept_id_s",
+                  "Sales",
+                  "text_t",
+                  "These guys sell stuff",
+                  "salary_i_dv",
+                  "1600",
+                  "dept_id_i",
+                  "2")));
+      deptsDocs.add(
+          add(
+              doc(
+                  deptIdField,
+                  "" + id++,
+                  "dept_id_s",
+                  "Support",
+                  "text_t",
+                  support,
+                  "salary_i_dv",
+                  "800",
+                  "dept_id_i",
+                  "3")));
     }
     addDocs(depts, deptsDocs);
   }
 
-  private void addDocs(String collection, List<String> docs) throws SolrServerException, IOException {
+  private void addDocs(String collection, List<String> docs)
+      throws SolrServerException, IOException {
     StringBuilder upd = new StringBuilder("<update>");
-    
+
     upd.append("<delete><query>*:*</query></delete>");
-    
-    for (Iterator<String> iterator = docs.iterator(); iterator.hasNext();) {
-      String add =  iterator.next();
+
+    for (Iterator<String> iterator = docs.iterator(); iterator.hasNext(); ) {
+      String add = iterator.next();
       upd.append(add);
       if (rarely()) {
         upd.append(commit("softCommit", "true"));
@@ -240,13 +414,17 @@ public class TestSubQueryTransformerDistrib extends SolrCloudTestCase {
           upd.append(commit("softCommit", "false"));
         }
         upd.append("</update>");
-        
-        ContentStreamUpdateRequest req = new ContentStreamUpdateRequest("/update");
-        req.addContentStream(new ContentStreamBase.StringStream(upd.toString(),"text/xml"));
-        
+
+        ContentStreamUpdateRequest req = withBasicAuth(new ContentStreamUpdateRequest("/update"));
+        req.addContentStream(new ContentStreamBase.StringStream(upd.toString(), "text/xml"));
         cluster.getSolrClient().request(req, collection);
         upd.setLength("<update>".length());
       }
     }
+  }
+
+  private static <T extends SolrRequest<? extends SolrResponse>> T withBasicAuth(T req) {
+    req.setBasicAuthCredentials(USER, PASS);
+    return req;
   }
 }
