@@ -16,6 +16,8 @@
  */
 package org.apache.solr.search;
 
+import com.codahale.metrics.Gauge;
+import com.codahale.metrics.Metric;
 import java.io.IOException;
 import java.lang.reflect.Array;
 import java.util.Date;
@@ -26,10 +28,6 @@ import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
-
-import com.codahale.metrics.Gauge;
-import com.codahale.metrics.Metric;
-import com.google.common.collect.ImmutableMap;
 import org.apache.lucene.index.IndexReader;
 import org.apache.lucene.index.IndexReaderContext;
 import org.apache.lucene.index.LeafReaderContext;
@@ -59,12 +57,12 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
   public static void beforeClass() throws Exception {
 
     // we need a consistent segmentation because reopen test validation
-    // dependso n merges not happening when it doesn't expect
+    // depends on merges not happening when it doesn't expect
     systemSetPropertySolrTestsMergePolicyFactory(LogDocMergePolicyFactory.class.getName());
 
-    initCore("solrconfig.xml","schema.xml");
+    initCore("solrconfig.xml", "schema.xml");
   }
-  
+
   @AfterClass
   public static void afterClass() {
     systemClearPropertySolrTestsMergePolicyFactory();
@@ -75,7 +73,7 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
     System.getProperties().remove("tests.solr.useColdSearcher");
     super.setUp();
   }
-  
+
   @Override
   public void tearDown() throws Exception {
     super.tearDown();
@@ -95,37 +93,37 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
     int idx = ReaderUtil.subIndex(doc, leaves);
     LeafReaderContext leaf = leaves.get(idx);
     FunctionValues vals = vs.getValues(context, leaf);
-    return vals.strVal(doc-leaf.docBase);
+    return vals.strVal(doc - leaf.docBase);
   }
 
   public void testReopen() throws Exception {
 
-    assertU(adoc("id","1", "v_t","Hello Dude", "v_s1","string1"));
-    assertU(adoc("id","2", "v_t","Hello Yonik", "v_s1","string2"));
+    assertU(adoc("id", "1", "v_t", "Hello Dude", "v_s1", "string1"));
+    assertU(adoc("id", "2", "v_t", "Hello Yonik", "v_s1", "string2"));
     assertU(commit());
 
-    SolrQueryRequest sr1 = req("q","foo");
+    SolrQueryRequest sr1 = req("q", "foo");
     IndexReader r1 = sr1.getSearcher().getRawReader();
 
-    String sval1 = getStringVal(sr1, "v_s1",0);
+    String sval1 = getStringVal(sr1, "v_s1", 0);
     assertEquals("string1", sval1);
 
-    assertU(adoc("id","3", "v_s1","{!literal}"));
-    assertU(adoc("id","4", "v_s1","other stuff"));
+    assertU(adoc("id", "3", "v_s1", "{!literal}"));
+    assertU(adoc("id", "4", "v_s1", "other stuff"));
     assertU(commit());
 
-    SolrQueryRequest sr2 = req("q","foo");
+    SolrQueryRequest sr2 = req("q", "foo");
     IndexReader r2 = sr2.getSearcher().getRawReader();
 
     // make sure the readers share the first segment
     // Didn't work w/ older versions of lucene2.9 going from segment -> multi
     assertEquals(r1.leaves().get(0).reader(), r2.leaves().get(0).reader());
 
-    assertU(adoc("id","5", "v_f","3.14159"));
-    assertU(adoc("id","6", "v_f","8983", "v_s1","string6"));
+    assertU(adoc("id", "5", "v_f", "3.14159"));
+    assertU(adoc("id", "6", "v_f", "8983", "v_s1", "string6"));
     assertU(commit());
 
-    SolrQueryRequest sr3 = req("q","foo");
+    SolrQueryRequest sr3 = req("q", "foo");
     IndexReader r3 = sr3.getSearcher().getRawReader();
     // make sure the readers share segments
     // assertEquals(r1.getLeafReaders()[0], r3.getLeafReaders()[0]);
@@ -133,7 +131,7 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
     assertEquals(r2.leaves().get(1).reader(), r3.leaves().get(1).reader());
 
     sr1.close();
-    sr2.close();            
+    sr2.close();
 
     // should currently be 1, but this could change depending on future index management
     int baseRefCount = r3.getRefCount();
@@ -141,20 +139,22 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
 
     Map<String, Metric> metrics = h.getCore().getCoreMetricManager().getRegistry().getMetrics();
     @SuppressWarnings({"unchecked"})
-    Gauge<Date> g = (Gauge<Date>)metrics.get("SEARCHER.searcher.registeredAt");
+    Gauge<Date> g = (Gauge<Date>) metrics.get("SEARCHER.searcher.registeredAt");
     Date sr3SearcherRegAt = g.getValue();
     assertU(commit()); // nothing has changed
-    SolrQueryRequest sr4 = req("q","foo");
-    assertSame("nothing changed, searcher should be the same",
-               sr3.getSearcher(), sr4.getSearcher());
-    assertEquals("nothing changed, searcher should not have been re-registered",
-                 sr3SearcherRegAt, g.getValue());
+    SolrQueryRequest sr4 = req("q", "foo");
+    assertSame(
+        "nothing changed, searcher should be the same", sr3.getSearcher(), sr4.getSearcher());
+    assertEquals(
+        "nothing changed, searcher should not have been re-registered",
+        sr3SearcherRegAt.toInstant(),
+        g.getValue().toInstant());
     IndexReader r4 = sr4.getSearcher().getRawReader();
 
     // force an index change so the registered searcher won't be the one we are testing (and
     // then we should be able to test the refCount going all the way to 0
-    assertU(adoc("id","7", "v_f","7574"));
-    assertU(commit()); 
+    assertU(adoc("id", "7", "v_f", "7574"));
+    assertU(commit());
 
     // test that reader didn't change
     assertSame(r3, r4);
@@ -162,114 +162,126 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
     sr3.close();
     assertEquals(baseRefCount, r4.getRefCount());
     sr4.close();
-    assertEquals(baseRefCount-1, r4.getRefCount());
+    assertEquals(baseRefCount - 1, r4.getRefCount());
 
-
-    SolrQueryRequest sr5 = req("q","foo");
+    SolrQueryRequest sr5 = req("q", "foo");
     IndexReaderContext rCtx5 = sr5.getSearcher().getTopReaderContext();
 
     assertU(delI("1"));
     assertU(commit());
-    SolrQueryRequest sr6 = req("q","foo");
+    SolrQueryRequest sr6 = req("q", "foo");
     IndexReaderContext rCtx6 = sr6.getSearcher().getTopReaderContext();
-    assertEquals(1, rCtx6.leaves().get(0).reader().numDocs()); // only a single doc left in the first segment
-    assertTrue( !rCtx5.leaves().get(0).reader().equals(rCtx6.leaves().get(0).reader()) );  // readers now different
+    assertEquals(
+        1, rCtx6.leaves().get(0).reader().numDocs()); // only a single doc left in the first segment
+    assertNotEquals(
+        rCtx5.leaves().get(0).reader(), rCtx6.leaves().get(0).reader()); // readers now different
 
     sr5.close();
     sr6.close();
   }
 
-
   // make sure we don't leak searchers (SOLR-3391)
   public void testCloses() {
-    assertU(adoc("id","1"));
-    assertU(commit("openSearcher","false"));  // this was enough to trigger SOLR-3391
+    assertU(adoc("id", "1"));
+    assertU(commit("openSearcher", "false")); // this was enough to trigger SOLR-3391
 
     int maxDoc = random().nextInt(20) + 1;
 
     // test different combinations of commits
-    for (int i=0; i<100; i++) {
+    for (int i = 0; i < 100; i++) {
 
       if (random().nextInt(100) < 50) {
         String id = Integer.toString(random().nextInt(maxDoc));
-        assertU(adoc("id",id));
+        assertU(adoc("id", id));
       } else {
         boolean soft = random().nextBoolean();
         boolean optimize = random().nextBoolean();
         boolean openSearcher = random().nextBoolean();
 
         if (optimize) {
-          assertU(optimize("openSearcher",""+openSearcher, "softCommit",""+soft));
+          assertU(optimize("openSearcher", "" + openSearcher, "softCommit", "" + soft));
         } else {
-          assertU(commit("openSearcher",""+openSearcher, "softCommit",""+soft));
+          assertU(commit("openSearcher", "" + openSearcher, "softCommit", "" + soft));
         }
       }
     }
-
   }
-  
+
   public void testSearcherListeners() throws Exception {
     MockSearchComponent.registerSlowSearcherListener = false;
-        
+
     MockSearchComponent.registerFirstSearcherListener = false;
     MockSearchComponent.registerNewSearcherListener = false;
     createCoreAndValidateListeners(0, 0, 0, 0);
-    
+
     MockSearchComponent.registerFirstSearcherListener = true;
     MockSearchComponent.registerNewSearcherListener = false;
     createCoreAndValidateListeners(1, 1, 1, 1);
-    
+
     MockSearchComponent.registerFirstSearcherListener = true;
     MockSearchComponent.registerNewSearcherListener = true;
     createCoreAndValidateListeners(1, 1, 2, 1);
   }
-  
-  private void createCoreAndValidateListeners(int numTimesCalled, int numTimesCalledFirstSearcher,
-      int numTimesCalledAfterGetSearcher, int numTimesCalledFirstSearcherAfterGetSearcher) throws Exception {
+
+  private void createCoreAndValidateListeners(
+      int numTimesCalled,
+      int numTimesCalledFirstSearcher,
+      int numTimesCalledAfterGetSearcher,
+      int numTimesCalledFirstSearcherAfterGetSearcher)
+      throws Exception {
     CoreContainer cores = h.getCoreContainer();
     CoreDescriptor cd = h.getCore().getCoreDescriptor();
     SolrCore newCore = null;
     // reset counters
     MockSearcherListener.numberOfTimesCalled = new AtomicInteger();
     MockSearcherListener.numberOfTimesCalledFirstSearcher = new AtomicInteger();
-    
+
     try {
       // Create a new core, this should call all the firstSearcherListeners
-      newCore = cores.create("core1", cd.getInstanceDir(), ImmutableMap.of("config", "solrconfig-searcher-listeners1.xml"), false);
-      
-      //validate that the new core was created with the correct solrconfig
+      newCore =
+          cores.create(
+              "core1",
+              cd.getInstanceDir(),
+              Map.of("config", "solrconfig-searcher-listeners1.xml"),
+              false);
+
+      // validate that the new core was created with the correct solrconfig
       assertNotNull(newCore.getSearchComponent("mock"));
       assertEquals(MockSearchComponent.class, newCore.getSearchComponent("mock").getClass());
       assertFalse(newCore.getSolrConfig().useColdSearcher);
-      
+
       doQuery(newCore);
-      
+
       assertEquals(numTimesCalled, MockSearcherListener.numberOfTimesCalled.get());
-      assertEquals(numTimesCalledFirstSearcher, MockSearcherListener.numberOfTimesCalledFirstSearcher.get());
-      
+      assertEquals(
+          numTimesCalledFirstSearcher, MockSearcherListener.numberOfTimesCalledFirstSearcher.get());
+
       addDummyDoc(newCore);
-      
+
       // Open a new searcher, this should call the newSearcherListeners
       @SuppressWarnings("unchecked")
       Future<Void>[] future = (Future<Void>[]) Array.newInstance(Future.class, 1);
       newCore.getSearcher(true, false, future);
       future[0].get();
-      
+
       assertEquals(numTimesCalledAfterGetSearcher, MockSearcherListener.numberOfTimesCalled.get());
-      assertEquals(numTimesCalledFirstSearcherAfterGetSearcher, MockSearcherListener.numberOfTimesCalledFirstSearcher.get());
-      
+      assertEquals(
+          numTimesCalledFirstSearcherAfterGetSearcher,
+          MockSearcherListener.numberOfTimesCalledFirstSearcher.get());
+
     } finally {
       if (newCore != null) {
         cores.unload("core1");
       }
     }
   }
-  
+
   private void doQuery(SolrCore core) throws Exception {
     DirectSolrConnection connection = new DirectSolrConnection(core);
     ModifiableSolrParams params = new ModifiableSolrParams();
     params.add("q", "*:*");
-    assertTrue(connection.request("/select",params, null ).contains("<int name=\"status\">0</int>"));
+    assertTrue(
+        connection.request("/select", params, null).contains("<int name=\"status\">0</int>"));
   }
 
   public void testDontUseColdSearcher() throws Exception {
@@ -279,63 +291,71 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
     final AtomicBoolean querySucceeded = new AtomicBoolean(false);
     SlowSearcherListener.numberOfTimesCalled = new AtomicInteger(0);
     SlowSearcherListener.latch = new CountDownLatch(1);
-    
+
     CoreContainer cores = h.getCoreContainer();
     CoreDescriptor cd = h.getCore().getCoreDescriptor();
     final SolrCore newCore;
     boolean coreCreated = false;
     try {
       // Create a new core, this should call all the firstSearcherListeners
-      newCore = cores.create("core1", cd.getInstanceDir(), ImmutableMap.of("config", "solrconfig-searcher-listeners1.xml"), false);
+      newCore =
+          cores.create(
+              "core1",
+              cd.getInstanceDir(),
+              Map.of("config", "solrconfig-searcher-listeners1.xml"),
+              false);
       coreCreated = true;
-      
-      //validate that the new core was created with the correct solrconfig
+
+      // validate that the new core was created with the correct solrconfig
       assertNotNull(newCore.getSearchComponent("mock"));
       assertEquals(MockSearchComponent.class, newCore.getSearchComponent("mock").getClass());
       assertFalse(newCore.getSolrConfig().useColdSearcher);
-      
-      Thread t = new Thread() {
-        public void run() {
-          try {
-            doQuery(newCore);
-            querySucceeded.set(true);
-          } catch (Exception e) {
-            throw new RuntimeException(e);
-          }
-        };
-      };
+
+      Thread t =
+          new Thread() {
+            @Override
+            public void run() {
+              try {
+                doQuery(newCore);
+                querySucceeded.set(true);
+              } catch (Exception e) {
+                throw new RuntimeException(e);
+              }
+            }
+            ;
+          };
       t.start();
-      
+
       if (System.getProperty(SYSPROP_NIGHTLY) != null) {
         // even if we wait here, the SearcherListener should not finish
         Thread.sleep(500);
       }
-      // validate that the searcher warmer didn't finish yet. 
+      // validate that the searcher warmer didn't finish yet.
       assertEquals(0, SlowSearcherListener.numberOfTimesCalled.get());
       assertFalse("Query should be waiting for warming to finish", querySucceeded.get());
-      
-      // Let warmer finish 
+
+      // Let warmer finish
       SlowSearcherListener.latch.countDown();
-      
+
       // Validate that the query eventually succeeds
       for (int i = 0; i <= 1000; i++) {
         if (querySucceeded.get()) {
           break;
         }
         if (i == 1000) {
-          fail("Query didn't succeed after 10 secoonds");
+          fail("Query didn't succeed after 10 seconds");
         }
         Thread.sleep(10);
       }
-      
+
     } finally {
-      
+
       if (coreCreated) {
         cores.unload("core1");
       }
     }
   }
-  
+
   public void testUseColdSearcher() throws Exception {
     MockSearchComponent.registerFirstSearcherListener = false;
     MockSearchComponent.registerNewSearcherListener = false;
@@ -343,8 +363,7 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
     final AtomicBoolean querySucceeded = new AtomicBoolean(false);
     SlowSearcherListener.numberOfTimesCalled = new AtomicInteger(0);
     SlowSearcherListener.latch = new CountDownLatch(1);
-    
-    
+
     CoreContainer cores = h.getCoreContainer();
     CoreDescriptor cd = h.getCore().getCoreDescriptor();
     final SolrCore newCore;
@@ -352,46 +371,53 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
     try {
       System.setProperty("tests.solr.useColdSearcher", "true");
       // Create a new core, this should call all the firstSearcherListeners
-      newCore = cores.create("core1", cd.getInstanceDir(), ImmutableMap.of("config", "solrconfig-searcher-listeners1.xml"), false);
+      newCore =
+          cores.create(
+              "core1",
+              cd.getInstanceDir(),
+              Map.of("config", "solrconfig-searcher-listeners1.xml"),
+              false);
       coreCreated = true;
-      
-      //validate that the new core was created with the correct solrconfig
+
+      // validate that the new core was created with the correct solrconfig
       assertNotNull(newCore.getSearchComponent("mock"));
       assertEquals(MockSearchComponent.class, newCore.getSearchComponent("mock").getClass());
       assertTrue(newCore.getSolrConfig().useColdSearcher);
-      
-      Thread t = new Thread() {
-        public void run() {
-          try {
-            doQuery(newCore);
-            querySucceeded.set(true);
-          } catch (Exception e) {
-            throw new RuntimeException(e);
-          }
-        };
-      };
+
+      Thread t =
+          new Thread() {
+            @Override
+            public void run() {
+              try {
+                doQuery(newCore);
+                querySucceeded.set(true);
+              } catch (Exception e) {
+                throw new RuntimeException(e);
+              }
+            }
+            ;
+          };
       t.start();
-      
+
       // validate that the query runs before the searcher warmer finishes
       for (int i = 0; i <= 1000; i++) {
         if (querySucceeded.get()) {
           break;
         }
         if (i == 1000) {
-          fail("Query didn't succeed after 10 secoonds");
+          fail("Query didn't succeed after 10 seconds");
         }
         Thread.sleep(10);
       }
-      
+
       assertEquals(0, SlowSearcherListener.numberOfTimesCalled.get());
-      
+
     } finally {
       System.getProperties().remove("tests.solr.useColdSearcher");
       if (coreCreated) {
         SlowSearcherListener.latch.countDown();
         cores.unload("core1");
       }
-      
     }
   }
 
@@ -406,12 +432,12 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
     static boolean registerFirstSearcherListener = false;
     static boolean registerNewSearcherListener = false;
     static boolean registerSlowSearcherListener = false;
-    
-    @Override
-    public void prepare(ResponseBuilder rb) throws IOException {}
 
     @Override
-    public void process(ResponseBuilder rb) throws IOException {}
+    public void prepare(ResponseBuilder rb) {}
+
+    @Override
+    public void process(ResponseBuilder rb) {}
 
     @Override
     public String getDescription() {
@@ -430,11 +456,10 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
         core.registerFirstSearcherListener(new SlowSearcherListener());
       }
     }
-    
   }
-  
+
   static class MockSearcherListener implements SolrEventListener {
-    
+
     static AtomicInteger numberOfTimesCalled;
     static AtomicInteger numberOfTimesCalledFirstSearcher;
 
@@ -445,20 +470,19 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
     public void postSoftCommit() {}
 
     @Override
-    public void newSearcher(SolrIndexSearcher newSearcher,
-        SolrIndexSearcher currentSearcher) {
+    public void newSearcher(SolrIndexSearcher newSearcher, SolrIndexSearcher currentSearcher) {
       numberOfTimesCalled.incrementAndGet();
       if (currentSearcher == null) {
         numberOfTimesCalledFirstSearcher.incrementAndGet();
       }
     }
   }
-  
+
   static class SlowSearcherListener implements SolrEventListener {
-    
+
     static AtomicInteger numberOfTimesCalled;
     static CountDownLatch latch;
-    
+
     @Override
     public void postCommit() {}
 
@@ -466,10 +490,10 @@ public class TestIndexSearcher extends SolrTestCaseJ4 {
     public void postSoftCommit() {}
 
     @Override
-    public void newSearcher(SolrIndexSearcher newSearcher,
-        SolrIndexSearcher currentSearcher) {
+    public void newSearcher(SolrIndexSearcher newSearcher, SolrIndexSearcher currentSearcher) {
       try {
-        assert currentSearcher == null: "SlowSearcherListener should only be used as FirstSearcherListener";
+        assertNull(
+            "SlowSearcherListener should only be used as FirstSearcherListener", currentSearcher);
         // simulate a slow searcher listener
         latch.await(10, TimeUnit.SECONDS);
       } catch (InterruptedException e) {
