@@ -17,40 +17,38 @@
 
 package org.apache.solr.util.configuration.providers;
 
-import java.util.Map;
+import static org.apache.solr.util.configuration.providers.AbstractSSLCredentialProvider.DEFAULT_CREDENTIAL_KEY_MAP;
+import static org.hamcrest.core.Is.is;
 
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
+import org.apache.solr.SolrTestCase;
 import org.apache.solr.util.configuration.SSLCredentialProvider;
 import org.junit.Test;
 
-import static org.apache.solr.util.configuration.providers.AbstractSSLCredentialProvider.DEFAULT_CREDENTIAL_KEY_MAP;
-import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.assertThat;
-
-/**
- */
-public class EnvSSLCredentialProviderTest {
+/** */
+public class EnvSSLCredentialProviderTest extends SolrTestCase {
 
   @Test
-  public void testGetCredentials() throws Exception {
+  public void testGetCredentials() {
     int cnt = 0;
-    Map<String, String> envvars = ImmutableMap.of(
-        EnvSSLCredentialProvider.EnvVars.SOLR_SSL_KEY_STORE_PASSWORD, "pw" + ++cnt,
-        EnvSSLCredentialProvider.EnvVars.SOLR_SSL_TRUST_STORE_PASSWORD, "pw" + ++cnt,
-        EnvSSLCredentialProvider.EnvVars.SOLR_SSL_CLIENT_KEY_STORE_PASSWORD, "pw" + ++cnt,
-        EnvSSLCredentialProvider.EnvVars.SOLR_SSL_CLIENT_TRUST_STORE_PASSWORD, "pw" + ++cnt
-    );
+    Map<String, String> envvars =
+        Map.of(
+            EnvSSLCredentialProvider.EnvVars.SOLR_SSL_KEY_STORE_PASSWORD, "pw" + ++cnt,
+            EnvSSLCredentialProvider.EnvVars.SOLR_SSL_TRUST_STORE_PASSWORD, "pw" + ++cnt,
+            EnvSSLCredentialProvider.EnvVars.SOLR_SSL_CLIENT_KEY_STORE_PASSWORD, "pw" + ++cnt,
+            EnvSSLCredentialProvider.EnvVars.SOLR_SSL_CLIENT_TRUST_STORE_PASSWORD, "pw" + ++cnt);
     EnvSSLCredentialProvider sut = new EnvSSLCredentialProvider();
     sut.setEnvVars(envvars);
     cnt = 0;
-    for (Map.Entry<SSLCredentialProvider.CredentialType, String> set : DEFAULT_CREDENTIAL_KEY_MAP.entrySet()) {
+    for (Map.Entry<SSLCredentialProvider.CredentialType, String> set :
+        DEFAULT_CREDENTIAL_KEY_MAP.entrySet()) {
       String expectedpw = "pw" + ++cnt;
       assertThat(sut.getCredential(set.getKey()), is(expectedpw));
     }
   }
 
   @Test
-  public void testGetCredentialsWithEnvVars() throws Exception {
+  public void testGetCredentialsWithEnvVars() {
     EnvSSLCredentialProvider sut = new EnvSSLCredentialProvider();
     // assuming not to fail
     sut.getCredential(SSLCredentialProvider.CredentialType.SSL_KEY_STORE_PASSWORD);
